--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,8 @@ API_PORT=8080
 # Discord OAuth2 credentials - get from https://discord.com/developers/applications
 DISCORD_CLIENT_ID=your_discord_client_id_here
 DISCORD_CLIENT_SECRET=your_discord_client_secret_here
-DISCORD_REDIRECT_URI=http://localhost:3000/auth/callback
+DISCORD_REDIRECT_URI=https://yourdomain.com/auth/callback
+DASHBOARD_URL=
 
 # Secret key for signing JWT session tokens (use a long random string)
 JWT_SECRET=your_jwt_secret_here
